--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "firebase": "^8.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
+    "sneaks-api": "^1.1.1",
     "typescript": "^4.2.3",
     "web-vitals": "^0.2.4"
   },
