--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "firebase": "^8.0.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-confirm-alert": "^2.7.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
+    "reactstrap": "^8.9.0",
     "sneaks-api": "^1.1.1",
     "typescript": "^4.2.3",
     "web-vitals": "^0.2.4"
