--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.0.0",
+    "http2": "^3.3.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-confirm-alert": "^2.7.0",
