--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
+    "react-toastify": "^7.0.3",
     "reactstrap": "^8.9.0",
     "sneaks-api": "^1.1.1",
     "typescript": "^4.2.3",
