--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-toastify": "^7.0.3",
     "reactstrap": "^8.9.0",
     "sneaks-api": "^1.1.1",
+    "styled-components": "^5.2.3",
     "typescript": "^4.2.3",
     "web-vitals": "^0.2.4"
   },
